# Ore-game

./: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  README.md  Tile.cpp  Tile.h  Tilemap.cpp  Tilemap.h  Tileselector.cpp  Tileselector.h  UI_info.cpp  UI_info.h
data/: level.txt
scripts/: create_map.py
